--- a/VRChat/55/1189755.html
+++ b/VRChat/55/1189755.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "R8ruomfDmH7tc58k0k1ZLYrp90TS7tbEfC6l/sNjceg="></script>
+    "z1Ejj2bsc+7dgkutyJLaDpF+Sv3jvuar935S3Zl/ZH0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"10テクスチャカーペット","description":"VRChat向け3Dモデル「10テクスチャカーペット」\n\n△298ポリゴン\n\nカーペットです。ワールドに置いたりアバターを乗せたりアバターにするのにどうぞ！\n\n4Kテクスチャが10種類同梱されているので好きな柄を選ぶことができます。\n\nVRChat向けではありますが、他の目的にもお使いいただくことが可能です。","url":"https://booth.pm/ja/items/1189755","offers":{"priceCurrency":"JPY","@type":"Offer","price":"400"},"image":"https://booth.pximg.net/c/620x620/fd12f873-ecbb-4fe4-973b-3208cf7ebc52/i/1189755/76efb46a-b3c4-4f59-bd5d-6e8fa050056d_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="R8ruomfDmH7tc58k0k1ZLYrp90TS7tbEfC6l/sNjceg="></script>
+    nonce="z1Ejj2bsc+7dgkutyJLaDpF+Sv3jvuar935S3Zl/ZH0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,10 +164,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1189755/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              210
+                              211
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1189755/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              210
+                              211
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
