--- a/VRChat/84/1188284.html
+++ b/VRChat/84/1188284.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "wZbZBYVWFAFW0hyqWIV/pVXUxkDv8ePMj5+N9efojxc="></script>
+    "S0kk7u9Hsm4isE4HDAx1O60FSMir7UhZEBVLmJ0tNTQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"巻き寿司セット","description":"太巻きの各種カットモデルのセットです。\nバーチャル恵方巻はいかが？\n\n内容\n・巻き寿司ロング\n・巻き寿司ハーフ\n・巻き寿司カットA\n・巻き寿司カットB\n\n・骨入り巻き寿司ロング\n・DynamicBoneセットアップ済みプレハブ\n※DynamicBoneは付属してません！\n未導入の場合はMissing表示されますが、後から導入してもMissingは解除されます。\n\n\n〇できること\n・VRChatで使用する。\n・VRChat以外で使用する。\n・自作アプリケーションに組み込む（商用可）\n　Unity以外でもご利用いただけます。\n・VTuber活動の動画の素材として利用する\n・モデルデータ・テクスチャを加工する\n・マテリアル・シェーダー変更はご自由に\n\n〇できないこと\n・モデルデータ・テクスチャの再配布\n　モデルやテクスチャのオリジナルおよび、\n　それを元に加工したデータの再配布は禁止とします。\n・オンラインゲーム内で、プレーヤー間で交換できる\n　アイテムとしての利用も再配布に当たります。\n\n【使い方】\nダウンロードしたZipファイルを解凍後、Unityパッケージをプロジェクトにインポートしてください。Unity以外の環境はFBXフォルダ内のモデルデータ・テクスチャをご利用いただけます。\n\n【免責事項】\n当データ及び当データの一部を使用していかなる損害が発生したとしても当方はその責を負いません。","url":"https://booth.pm/ja/items/1188284","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/e1268668-be07-4201-814f-45e16892cfb6/i/1188284/fdf6cbb1-8040-4d58-b5cb-f9f5408b474b_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="wZbZBYVWFAFW0hyqWIV/pVXUxkDv8ePMj5+N9efojxc="></script>
+    nonce="S0kk7u9Hsm4isE4HDAx1O60FSMir7UhZEBVLmJ0tNTQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1188284/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               97
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1188284/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               97
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
