--- a/VRChat/56/1187756.html
+++ b/VRChat/56/1187756.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "sclW/9k+is8uPaYXdAa07r6xkODSRcGo0XaIO81uzX0="></script>
+    "92t7kG7qpgO7+UEILqvmq7q+yayxJhWdHpUTZx3w8ow="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"MCF エンジェルフィールドリボルバー","description":"【製品内容】\n・UnityPackage\n・利用規約\n\n【説明】\n伝統的なブレイクオープンリボルバー。\n小口径だがその見た目から愛好家が多い。\n\nSSは #MCF_VRC をつけてツイートしてくれると私が喜びます。\n\nボーン入りでブレイクオープン可能。トリガー、ハンマー、シリンダー可動。\n\nシェイプキー3種\n・イジェクト\n・バレル縮\n・バレル伸\n\n2DViewテクスチャ付属\nカラーバリエーション6色\n\n合計ポリ数:13690\nフレーム：9130\n弾：4560\n\n\n\n【免責事項】\n当モデルを使用した際、使用者側にいかなる不利益が発生した場合でも当方は一切責任を負いません。\n\n【禁止事項】\n・再配布（ゲームに組み込む・VRCのペデスタル等は許可）\n・政治的、差別的な用途への利用、又は過去にそのような用途に扱われた経歴のあるキャラクターへの利用","url":"https://booth.pm/ja/items/1187756","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/41721053-8f32-4b87-9b48-5fda7552cf1a/i/1187756/2a0b7cff-e1ff-401c-8979-ca753897750d_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="sclW/9k+is8uPaYXdAa07r6xkODSRcGo0XaIO81uzX0="></script>
+    nonce="92t7kG7qpgO7+UEILqvmq7q+yayxJhWdHpUTZx3w8ow="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1187756/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               121
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1187756/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               121
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
