--- a/VRChat/55/1187355.html
+++ b/VRChat/55/1187355.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "wgoD4nbR7Mcof40j7Pqu5YCWicFVjbp0ZvYoX3h5I/A="></script>
+    "efXXvBXVACSSxrMD31DF1CfHi+NP/gnp+mJb00qFdq0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"吸血刀","description":"3Dモデル　\n刀身のみ △256ポリゴン \n鞘あり   △442ポリゴン\n\nVRChatでの利用を想定した刀です。メタルマップも添付されているため、standard shaderでの使用推奨です。\n\n\nモデルの再配布および自作発言は禁止しています。テクスチャ改変は制限致しません。","url":"https://booth.pm/ja/items/1187355","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/b9012e25-620b-4a66-a927-58ca245f129c/i/1187355/1e66a9d0-f016-44b1-af85-4a7baa9c2cdb_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="wgoD4nbR7Mcof40j7Pqu5YCWicFVjbp0ZvYoX3h5I/A="></script>
+    nonce="efXXvBXVACSSxrMD31DF1CfHi+NP/gnp+mJb00qFdq0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1187355/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               35
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1187355/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               35
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
