--- a/VRChat/74/1186174.html
+++ b/VRChat/74/1186174.html
@@ -98,9 +98,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "hVYAijoGl1AMg9UpZL3LMajpGW9NN2/WBJvsOyRFewk="></script>
+    "8vYWM/MsUtUaSsZV9///7pTTNiXbBEV+B7U88K1z9zg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"最終電車EP","description":"\nバーチャルブルースマン、YAMADAの1stシングルです。\nなにかと劣等感を抱きがちな世界の皆様へ。\n\n01 最終電車\n02 No money No future(DEMO ver)\n\nこの楽曲を、 \n①賃貸業に使用すること \n②個人的な範囲を超える目的で使用すること \n③ネットワークなどを通じてこの楽曲を送信できる状態にすることを禁じます。 ","url":"https://booth.pm/ja/items/1186174","offers":{"priceCurrency":"JPY","@type":"Offer","price":"250"},"image":"https://booth.pximg.net/c/620x620/c446b467-12cc-4120-b72b-ec91668ac656/i/1186174/ba028bf4-adb0-4002-a6d7-2f71a1049d08_base_resized.jpg"}
     </script>
@@ -111,7 +111,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="hVYAijoGl1AMg9UpZL3LMajpGW9NN2/WBJvsOyRFewk="></script>
+    nonce="8vYWM/MsUtUaSsZV9///7pTTNiXbBEV+B7U88K1z9zg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -135,6 +135,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -178,7 +180,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1186174/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               71
@@ -193,14 +195,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1186174/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               71
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
