--- a/VRChat/96/1186396.html
+++ b/VRChat/96/1186396.html
@@ -72,9 +72,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "2UMpELlYeoA71Er6FqDgmu5w37tYo+XVJB7Lq3uJT8o="></script>
+    "/faIv/G4dVuVku89UYevAgO+d5MDT9K5ipHr1T0K5Kw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル【ラトナ】","description":"オリジナル3Dモデル【ラトナ】","url":"https://booth.pm/ja/items/1186396","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2000"},"image":"https://booth.pximg.net/c/620x620/c92e2ce9-ebdb-438c-97b5-28a9c11db43b/i/1186396/fe55dc94-0e65-435b-8ce1-2b94e2c49cd4_base_resized.jpg"}
     </script>
@@ -88,7 +88,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="2UMpELlYeoA71Er6FqDgmu5w37tYo+XVJB7Lq3uJT8o="></script>
+    nonce="/faIv/G4dVuVku89UYevAgO+d5MDT9K5ipHr1T0K5Kw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -112,6 +112,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -155,10 +157,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1186396/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              948
+                              950
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -170,14 +172,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1186396/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              948
+                              950
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
